manual_k8s/new-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
      # annotations:
      #    prometheus.io/scrape: 'true' 
      #    prometheus.io/port: '5000'
    spec:
      containers:
      - name: app
        image: "didis/app:30.16"
        ports:
        - containerPort: 5000
