manual_k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
        #  namespace: app
  name: ingress-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-services
              port:
                number: 5000
